--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,10 +42,16 @@ jobs:
       - name: Build with Gradle
         run: |
           cd android
-          ./gradlew clean assembleDebug --no-daemon --stacktrace --info
+          ./gradlew clean assembleDebug assembleRelease --no-daemon --stacktrace --info
 
-      - name: Upload APK
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-unsigned
+          path: android/app/build/outputs/apk/release/app-release-unsigned.apk
